# bgfx-test

./: .gitmodules  CMakeLists.txt  README.md  build.ps1  configure.ps1  run.sh  vts_bgfx.cmake
shaders/: dg_dmapack_def.sc  dg_dmapack_fs.sc  dg_dmapack_vs.sc  shader_fs.sc  shader_vs.sc
source/: main.cpp
